--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
+        <div id="app"></div>
+        <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
+        <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
